added transparent and sticky footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <ul>
                     <li><a href="#about-me">About Me</a></li>
                     <li><a href="#work">Work</a></li>
-                    <li><a href="#contact-me">Contact Me</a></li>
+                    <!-- <li><a href="#contact-me">Contact Me</a></li> -->
                     <li><a href="#resume">Resume</a></li>
                 </ul>
             </nav>
@@ -20,12 +20,15 @@
         <section id="name-box">
             <h1>Tony Zeuch Portfolio</h1>
         </section>
-        <section id="grid-container">
+        
+        <section id="flex-container">
             <article id="about-me" class="grid-box">
                 <div class="title-box">
                     <h2>About Me</h2>
                 </div>
-                <img src="assets/images/Business-Picture-Crop.jpg" alt="Tony Zeuch in business professional attire."/>
+                <div class="img-box">
+                    <img src="assets/images/Business-Picture-Crop.jpg" alt="Tony Zeuch in business professional attire."/>
+                </div>
             </article>
             <article id="work" class="grid-box">
                 <div class="title-box">
@@ -35,12 +38,21 @@
                     <img src="assets/images/Business-Picture-Crop.jpg" alt="Tony Zeuch in business professional attire."/>
                 </div>
             </article>
-            <article id="contact-me" class="grid-box">
-                <div class="title-box">
-                    <h2>Contact Me</h2>
-                </div>
-                <img src="assets/images/Business-Picture-Crop.jpg" alt="Tony Zeuch in business professional attire."/>
-            </article>
         </section>
+        <footer>
+            <div id="footer-container">
+                <div id="footer-title">
+                    <h2>Contact Me:</h2>
+                </div>
+                <nav id="footer-list">
+                    <ul>
+                        <li>405-905-9140</li>
+                        <li><a href="">zeuchtony@gmail.com</a></li>
+                        <li><a href="">Github</a></li>
+                        <li><a href="">LinkedIn</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
     </body>
 </html>
