added all inner content, need to rework css and modify for mobile use

--- a/index.html
+++ b/index.html
@@ -22,20 +22,100 @@
         </section>
         
         <section id="flex-container">
-            <article id="about-me" class="grid-box">
+            <article id="about-me">
                 <div class="title-box">
                     <h2>About Me</h2>
                 </div>
-                <div class="img-box">
-                    <img src="assets/images/Business-Picture-Crop.jpg" alt="Tony Zeuch in business professional attire."/>
-                </div>
+                <article class="background-box">
+                    <div class="img-box">
+                        <img src="assets/images/Business-Picture-Crop.jpg" alt="Tony Zeuch in business professional attire."/>
+                    </div>
+                    <div class="para-box">
+                        <p>
+                            I've been coding since I was in high school. My favorite languages are Java and Python. My main 
+                            experience is in back-end development, however, I've recently been learning about web-development.
+                        </p>
+                    </div>
+                    <div class="para-box">
+                        <p>
+                            I got into coding at my local technology center under the pre-engineering program. I went on to 
+                            major in Computer Enginneering in college. I have decided to learn web-development to increase my 
+                            skillset and allow myself to branch out further.
+                        </p>
+                    </div>
+                </article>
             </article>
-            <article id="work" class="grid-box">
+            <article id="work">
                 <div class="title-box">
                     <h2>Work</h2>
                 </div>
-                <div class="img-box">
-                    <img src="assets/images/Business-Picture-Crop.jpg" alt="Tony Zeuch in business professional attire."/>
+                <div class="background-box">
+                    <div class="tech-box python">
+                        <h3>Python</h3>
+                    </div>
+                    <div class="primary-project">
+                        <div class="project-box">
+                            <h4>Sudoku Solver</h4>
+                        </div>
+                        <div class="img-box stable">
+                            <a href="https://github.com/tzeuch0922/Sudoku-Solver">
+                                <img src="./assets/images/sudoku-solve.PNG" alt="Sodoku Solver picture">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="secondary-project">
+                        <div class="project-box">
+                            <h4>Kakuro Solver</h4>
+                        </div>
+                        <div class="img-box in-progress">
+                            <a href="https://github.com/tzeuch0922/kakuro-solver">
+                                <img src="./assets/images/kakuro-solve.png" alt="Kakuro Solver picture">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="secondary-project">
+                        <div class="project-box">
+                            <h4>Kenken Solver</h4>
+                        </div>
+                        <div class="img-box in-progress">
+                            <a href="https://github.com/tzeuch0922/kenken-solver">
+                                <img src="./assets/images/kenken-solve.png" alt="Kenken Solver picture">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="tech-box java">
+                        <h3>Java</h3>
+                    </div>
+                    <div class="primary-project">
+                        <div class="project-box">
+                            <h4>Minesweeper</h4>
+                        </div>
+                        <div class="img-box stable">
+                            <a href="https://github.com/tzeuch0922/Minesweeper">
+                                <img src="./assets/images/Minesweeper.png" alt="Minesweeper image">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="secondary-project"></div>
+                    <div class="secondary-project"></div>
+                    <div class="tech-box web">
+                        <h3>HTML/CSS</h3>
+                    </div>
+                    <div class="primary-project web-project">
+                        <div class="project-box">
+                            <h4>Run Buddy</h4>
+                        </div>
+                        <div class="img-box stable">
+                            <a href="https://github.com/tzeuch0922/Run-Buddy">
+                                <img src="./assets/images/run-buddy.PNG" alt="Run Buddy Image">
+                            </a>
+                        </div>
+                        <div class="web-link">
+                            <a href="https://tzeuch0922.github.io/Run-Buddy/">https://tzeuch0922.github.io/Run-Buddy/</a>
+                        </div>
+                    </div>
+                    <div class="secondary-project"></div>
+                    <div class="secondary-project"></div>
                 </div>
             </article>
         </section>
@@ -47,9 +127,9 @@
                 <nav id="footer-list">
                     <ul>
                         <li>405-905-9140</li>
-                        <li><a href="">zeuchtony@gmail.com</a></li>
-                        <li><a href="">Github</a></li>
-                        <li><a href="">LinkedIn</a></li>
+                        <li><a href="mailto:zeuchtony@gmail.com">zeuchtony@gmail.com</a></li>
+                        <li><a href="https://github.com/tzeuch0922">Github</a></li>
+                        <li><a href="https://www.linkedin.com/in/james-zeuch-65372a187/">LinkedIn</a></li>
                     </ul>
                 </nav>
             </div>
