Finished getting mobile sizing working

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
                 <ul>
                     <li><a href="#about-me">About Me</a></li>
                     <li><a href="#work">Work</a></li>
-                    <!-- <li><a href="#contact-me">Contact Me</a></li> -->
-                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="./assets/pdf/resume-summer-2020.pdf">Resume</a></li>
                 </ul>
             </nav>
         </header>
@@ -59,7 +58,7 @@
                         </div>
                         <div class="img-box stable">
                             <a href="https://github.com/tzeuch0922/Sudoku-Solver">
-                                <img src="./assets/images/sudoku-solve.PNG" alt="Sodoku Solver picture">
+                                <img src="./assets/images/sudoku-solve.PNG" alt="Sudoku Solver picture">
                             </a>
                         </div>
                     </div>
@@ -111,7 +110,7 @@
                             </a>
                         </div>
                         <div class="web-link">
-                            <a href="https://tzeuch0922.github.io/Run-Buddy/">https://tzeuch0922.github.io/Run-Buddy/</a>
+                            <a href="https://tzeuch0922.github.io/Run-Buddy/">Webpage Link</a>
                         </div>
                     </div>
                     <div class="secondary-project"></div>
