updated readme screenshots and added new project

--- a/index.html
+++ b/index.html
@@ -98,20 +98,20 @@
                     <div class="secondary-project"></div>
                     <div class="secondary-project"></div>
                     <div class="tech-box web">
-                        <h3>HTML/CSS</h3>
+                        <h3>HTML/CSS/JS</h3>
                     </div>
                     <div class="primary-project web-project">
                         <div class="project-box">
-                            <h4>Run Buddy</h4>
+                            <h4>Stock Manager</h4>
                         </div>
                         <div class="img-box stable">
-                            <a href="https://github.com/tzeuch0922/Run-Buddy">
-                                <img src="./assets/images/run-buddy.PNG" alt="Run Buddy Image">
+                            <a href="https://tzeuch0922.github.io/stock-manager/">
+                                <img src="./assets/images/stock-manager.PNG" alt="Stock Manager Image">
                             </a>
                         </div>
-                        <div class="web-link">
+                        <!-- <div class="web-link">
                             <a href="https://tzeuch0922.github.io/Run-Buddy/">Webpage Link</a>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="secondary-project"></div>
                     <div class="secondary-project"></div>
