add gift fairy to portfolio

--- a/index.html
+++ b/index.html
@@ -102,6 +102,19 @@
                     </div>
                     <div class="primary-project web-project">
                         <div class="project-box">
+                            <h4>Gift Fairy</h4>
+                        </div>
+                        <div class="img-box stable">
+                            <a href="https://polar-cove-94723.herokuapp.com/">
+                                <img src="./assets/images/Gift-fairy.PNG" alt="Gift Fairy Image">
+                            </a>
+                        </div>
+                        <!-- <div class="web-link">
+                            <a href="https://tzeuch0922.github.io/Run-Buddy/">Webpage Link</a>
+                        </div> -->
+                    </div>
+                    <div class="secondary-project">
+                        <div class="project-box">
                             <h4>Stock Manager</h4>
                         </div>
                         <div class="img-box stable">
@@ -109,11 +122,7 @@
                                 <img src="./assets/images/stock-manager.PNG" alt="Stock Manager Image">
                             </a>
                         </div>
-                        <!-- <div class="web-link">
-                            <a href="https://tzeuch0922.github.io/Run-Buddy/">Webpage Link</a>
-                        </div> -->
                     </div>
-                    <div class="secondary-project"></div>
                     <div class="secondary-project"></div>
                 </div>
             </article>
